--- a/components/header.html
+++ b/components/header.html
@@ -8,7 +8,7 @@
   <title>header</title>
 </head>
 <body>
-  <header>
+  <header id="header">
     <div id="navWrap">
       <div class="logo">
         <a href="index.html"><img src="/img/etc/logo/logo1.png" alt="VYOR 로고"></a>
