--- a/css/product.css
+++ b/css/product.css
@@ -16,7 +16,7 @@ Black : #1A1A1A
 *{margin: 0; padding: 0; text-decoration: none; list-style: none; box-sizing: border-box;}
 body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;}
 
-/* 1 Page */
+/* product_main 공통 */
 .product_main{
     /* background-color: aqua; */
     width: 100%;
@@ -33,7 +33,7 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
     }
     .product_mainTxt{
         /* background-color: green; */
-        width: 89%;
+        width: 90%;
         z-index: 1;
         position: absolute;
         bottom: 125px;
@@ -49,11 +49,11 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
             font-size: 22px;
         }
 
-/* 메뉴 */
+/* product_menus 메뉴공통 */
     .product_menus{
         background-color: #EEEAE2;
         width: 100%;
-        height: 80px;
+        height: 75px;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -64,9 +64,9 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
             font-size: 16px;
             color: #333333;
         }
-            .product_menus div:nth-child(1){
+            .product_menus_bold{
                 color: #000000;
-                font-weight: 500;
+                font-weight: 600;
             }
             .product_menus div:nth-child(2){
                 border-left: 1px solid #1A1A1A;
@@ -79,7 +79,7 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
 /* 2 Page */
 .product_page2{
     /* background-color: yellowgreen; */
-    width: 89%; 
+    width: 90%; 
     height: 140%;
     margin: 0 auto;
     display: flex;
@@ -146,7 +146,7 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
 /* 3 Page */
 .product_page3{
     /* background-color: thistle; */
-    width: 89%;
+    width: 90%;
     height: 220%;
     margin: 0 auto;
     display: flex;
@@ -233,3 +233,39 @@ body{width: 100vw; height: 100vh; overflow-x: hidden; background-color: #F5F3EE;
 
 
 
+/* Products_body_lotion */
+.product_body_lotion{
+    background-color: aqua;
+    width: 90%;
+    height: 150%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center ;
+}
+    .product_body_lotion_gridBox{
+        background-color: violet;
+        width: 100%;
+        display: grid;
+        grid-template-columns:50% auto;;
+        gap: 150px;
+    }
+        .body_lotion_grid{
+            border: 2px solid #333;
+        }
+    
+    .body_lotion_imgbox{
+        background-color: turquoise;
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+        .body_lotion_imgbox img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain; /* 비율 유지하면서 꽉 채우기 */
+    display: block;
+}
