--- a/components/header.html
+++ b/components/header.html
@@ -60,11 +60,11 @@
         </div>
       </div>
 
-      <div class="nav_icon close_icon">
+      <a class="nav_icon close_icon" data-page="sitemap">
         <div class="line1"></div>
         <div class="line2"></div>
         <div class="line3"></div>
-      </div>
+      </a>
     </div>
 
   </header>
