--- a/components/footer.html
+++ b/components/footer.html
@@ -1,54 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>footer</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>footer</title>
+    </head>
 
-<body>
-  <footer id="footer">
-    <div class="footer_inner">
-      <div class="foot_logo">
-        <img src="https://vyor.kr/images/common/foot_logo.png" alt="로고">
-      </div>
-      <div class="textSide">
-        <div class="left_txt">
-          <div class="tit">
-            <p>법인명</p>
-            <p>대표자</p>
-            <p>사업자등록번호</p>
-          </div>
-          <div class="under_line">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <div class="desc">
-            <p>(주)보쉬</p>
-            <p>김관우</p>
-            <p>724-86-03499</p>
-          </div>
-        </div>
-        <div class="right_txt">
-          <div class="tit">
-            <p>Address</p>
-            <p>E-mail</p>
-          </div>
-          <div class="under_line">
-            <div></div>
-            <div></div>
-          </div>
-          <div class="desc">
-            <p>서울시 서초구 논현로 87</p>
-            <p>vyor@vyor.co.kr</p>
-          </div>
-        </div>
-      </div>
-      <div class="copyright">
-        <p>Copyright (c) 2025 VYOR All Rights Reserved.</p>
-      </div>
-    </div>
-  </footer> 
-</body>
+    <body>
+        <footer id="footer">
+            <div class="footer_inner">
+                <div class="foot_logo">
+                    <img
+                        src="https://vyor.kr/images/common/foot_logo.png"
+                        alt="로고"
+                    />
+                </div>
+                <div class="textSide">
+                    <div class="left_txt">
+                        <div class="tit">
+                            <p>법인명</p>
+                            <p>대표자</p>
+                            <p>사업자등록번호</p>
+                        </div>
+                        <div class="under_line">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div class="desc">
+                            <p>(주)보쉬</p>
+                            <p>김관우</p>
+                            <p>724-86-03499</p>
+                        </div>
+                    </div>
+                    <div class="right_txt">
+                        <div class="tit">
+                            <p>Address</p>
+                            <p>E-mail</p>
+                        </div>
+                        <div class="under_line">
+                            <div></div>
+                            <div></div>
+                        </div>
+                        <div class="desc">
+                            <p>서울시 서초구 논현로 87</p>
+                            <p>vyor@vyor.co.kr</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    <p>Copyright (c) 2025 VYOR All Rights Reserved.</p>
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
