--- a/css/contact.css
+++ b/css/contact.css
@@ -1,1 +1,194 @@
-contact.css
+@import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;500;600;700&display=swap");
+
+.cormorant-garamond {
+    font-family: "Cormorant Garamond", serif;
+    font-size: 188px;
+    font-weight: 100;
+    letter-spacing: -0.1rem;
+}
+ul {
+    list-style: none;
+}
+
+html,
+body {
+    height: 100%;
+    margin: 0;
+    background-color: #f5f3ee;
+    list-style: none;
+}
+
+/* 섹션1 */
+#contact {
+    position: relative;
+    width: 100%;
+    height: 100svh;
+    overflow: hidden;
+}
+
+#contact video {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 0;
+}
+
+.contactText {
+    position: absolute;
+    bottom: 5vh;
+    left: 5vw;
+    z-index: 1;
+    /* background-color: darkgoldenrod; */
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contactText h1 {
+    color: #fff;
+    font-size: 130px;
+    font-weight: bold;
+    font-size: 188px;
+    font-weight: 300;
+    font-family: "Cormorant Garamond", serif;
+    letter-spacing: -0.1rem;
+}
+
+.contactText p {
+    color: #fff;
+    font-size: 20px;
+    /* margin-top: 55px; */
+    margin-bottom: 100px;
+}
+
+/* 섹션2 */
+#contact_2 {
+    width: 100%;
+    margin-top: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.con2_outBox {
+    width: 90%;
+    min-height: 400px;
+    /* background-color: antiquewhite; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.con2_LeftBox {
+    width: 50%;
+    /* background-color: aquamarine; */
+    position: relative;
+}
+
+.con2_ImgBox > .conLog {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 35%;
+}
+
+.con2_ImgBox > h3 {
+    position: absolute;
+    left: 50%;
+    top: 58%;
+    transform: translate(-50%, -50%);
+    font-size: 22px;
+    font-weight: 400;
+    color: #fff;
+}
+
+.con2_ImgBox > h3 > span {
+    font-family: "Cormorant Garamond", serif;
+}
+
+.con2_RightBox {
+    width: 50%;
+    height: 60vw;
+    /* background-color: yellowgreen; */
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.con2_Right_InBox {
+    width: 90%;
+    height: 90%;
+    /* background-color: aquamarine; */
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.con2_Right_InBox > div {
+    font-size: 20px;
+}
+
+.con2_Right_InBox > input {
+    width: 100%;
+    height: 60px;
+    background-color: #f5f3ee;
+    border: 1px solid #ccc;
+}
+
+.con2_Right_InBox > input:focus {
+    border: 1px solid #000;
+    background-color: #fff;
+    outline: none;
+}
+
+.con2_Right_InBox > textarea {
+    width: 100%;
+    height: 400px;
+    background-color: #f5f3ee;
+    border: 1px solid #ccc;
+}
+
+.con2_Right_InBox > textarea:focus {
+    border: 1px solid #000;
+    background-color: #fff;
+    outline: none;
+}
+
+.con2_RightBox > #conBtnTxt {
+    width: 90%;
+    height: 50px;
+    font-size: 18px;
+    font-weight: bold;
+    /* background-color: aqua; */
+    text-align: center;
+    font-family: "Cormorant Garamond", serif;
+    margin-top: 50px;
+}
+
+.ri-arrow-right-line {
+    font-size: 15px;
+    font-weight: lighter;
+    border: 1px solid #000;
+    border-radius: 50%;
+    padding: 15px;
+}
+
+.ri-arrow-right-line:hover {
+    background-color: #000;
+    color: #fff;
+    cursor: pointer;
+}
+
+/* 빈박스 */
+.con2_bottomBox {
+    width: 100%;
+    height: 200px;
+    /* background-color: blue; */
+}
